# ez_excel_graph

./: .claude.settings.example.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  pyproject.toml
.claude/commands/: pro-graph.md
.github/workflows/: ci.yml
resources/: README.md  example_template.xlsx
scripts/: check_updates.sh  dev_setup.sh  setup_all.sh  setup_auto_update_check.sh  setup_claude.sh  setup_git.sh  setup_project.sh  setup_python.sh  setup_vscode.sh  setup_wsl_check.sh
src/excel_to_graph/: __init__.py  analyzer.py  cli.py  converter.py  reader.py  utils.py  visualizer.py
tests/: __init__.py  test_utils.py
