[project]
name = "excel-to-graph"
version = "0.1.0"
description = "Generate beautiful graphs from Excel timeline data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",  # For reading .xlsx files
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",  # For PDF export from plotly
    "seaborn>=0.13.0",  # Additional plotting capabilities
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
excel-to-graph = "excel_to_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_to_graph"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
