[project]
name = "excel-to-graph"
version = "0.1.0"
description = "AI-Assisted Excel to Graph for Simplifying the Life of Social Science Ph.D. Students"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Excel to Graph Contributors", email = ""}
]
keywords = ["excel", "graphs", "visualization", "social-science", "research", "qualitative-data", "AI-assisted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",  # For reading .xlsx files
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",  # For PDF export from plotly
    "seaborn>=0.13.0",  # Additional plotting capabilities
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.5",  # Match pre-commit version for consistency
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
excel-to-graph = "excel_to_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_to_graph"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
